# miel

./: .env.example  .gitignore  DEVELOPMENT.md  Makefile.toml  README.md  index.html
src/core/: Cargo.toml  template.toml  test.toml
src/core/examples/: container_manager_demo.rs  storage_database_demo.rs  storage_demo.rs
src/core/services/: 3.toml  service_config.toml  ssh.toml
src/core/src/: configuration.rs  container_management.rs  data_capture.rs  lib.rs  main.rs  session_management.rs  storage.rs  web_interface.rs
src/core/src/configuration/: config.rs  service_config.rs  types.rs
src/core/src/configuration_parser/: configuration.rs  configuration_parser.rs  mod.rs  runtime_configuration.rs
src/core/src/container_management/: container_handle.rs  container_manager.rs  integration_tests.rs  obfuscation.rs  tests.rs  types.rs
src/core/src/container_manager/: mod.rs
src/core/src/controller/: controller_handler.rs  mod.rs
src/core/src/data_capture/: recorder.rs  stdio_capture.rs  storage.rs  stream_recorder.rs  tcp_capture.rs  types.rs
src/core/src/error_handling/: types.rs
src/core/src/listener_manager/: listener_manager.rs  mod.rs
src/core/src/network/: connection_filter.rs  network_listener.rs  protocol_filter.rs  service_detector.rs  service_pattern.rs  session_request.rs  types.rs
src/core/src/session_management/: active_session.rs  session.rs  session_manager.rs
src/core/src/session_recorder/: mod.rs
src/core/src/storage/: database_storage.rs  db_entities.rs  file_storage.rs  session_filter.rs  storage.rs  storage_trait.rs  types.rs
(+2435 files in other folders)
